@@ -2,6 +2,8 @@
 
 	* tex.el (TeX-command-default): Mark as safe-local-variable.
 	(TeX-quote-language-alist): Improve custom type.
+	(TeX-quote-language-alist): Fix custom type for French.  Add links
+	to the manual.
 
 2006-12-30  Ralf Angeli  <angeli@caeruleus.net>
 
